Finish updating 2012 roster

--- a/rosters/2012.yml
+++ b/rosters/2012.yml
@@ -12,3 +12,68 @@
   name: Adrian Peterson
   posiiton: RB
   team: MIN
+
+-
+  name: Calvin Johnson
+  posiiton: WR
+  team: DET
+
+-
+  name: Vincent Jackson
+  posiiton: WR
+  team: TB
+
+-
+  name: Aaron Hernandez
+  posiiton: TE
+  team: NE
+
+-
+  name: Alfred Morris
+  posiiton: RB
+  team: WAS
+
+-
+  name: Peyton Manning
+  posiiton: QB
+  team: DEN
+
+-
+  name: Ahmad Bradshaw
+  posiiton: RB
+  team: NYG
+
+-
+  name: Frank Gore
+  posiiton: RB
+  team: SF
+
+-
+  name: Victor Cruz
+  posiiton: WR
+  team: NYG
+
+-
+  name: Mike Wallace
+  posiiton: WR
+  team: PIT
+
+-
+  name: Reggie Wayne
+  posiiton: WR
+  team: IND
+
+-
+  name: Jimmy Graham
+  posiiton: TE
+  team: NO
+
+-
+  name: Sebastian Janikowski
+  posiiton: K
+  team: OAK
+
+-
+  name: Chicago Bears
+  posiiton: DEF
+  team: CHI
